Fix top of title on home-page being cut off if CKJ displayed
The h1 element on the home-page had the top of cut off if the
translation was set to a language that used CKJ characters. Fixed.

--- a/source/common/styles.css
+++ b/source/common/styles.css
@@ -105,7 +105,7 @@ button,
   color: transparent;
   background-image: linear-gradient(95deg, white, #f4dda7, white);
   text-shadow: 0 0 20px #f1c96c9f;
-  line-height: 0.6;
+  line-height: 1;
   padding: 15px 0;
 }
 @keyframes shimmer {
